force-app/main/default/objects/chttrunfollow__UnfollowRule__c/chttrunfollow__UnfollowRule__c.object-meta.xml
<CustomObject>
    <description>Create rules which are evaluated each night.  If any records match your rule criteria, all people following that rule will be unfollowed from that record.

For example: if you have a rule to unfollow cases 2 days after the status is set to Closed and a case with 2 followers closes today, 2 days from now both of those followers will be unfollowed from the case.</description>
    <label>Chatter Unfollow Rules</label>
    <nameField>
        <label>Chatter Unfollow Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>