force-app/main/default/objects/chttrunfollow__UnfollowRule__c/fields/chttrunfollow__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__FieldLabel__c</fullName>
    <description>This is the label that goes with a the field name.  For example: campaign member field HasResponded has a label of Responded.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>