force-app/main/default/objects/chttrunfollow__UnfollowRule__c/fields/chttrunfollow__FieldName__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__FieldName__c</fullName>
    <description>This is the field that will be evaluated such as Stage for an Opportunity rule.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>