force-app/main/default/objects/chttrunfollow__UnfollowRule__c/fields/chttrunfollow__FieldType__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__FieldType__c</fullName>
    <description>Stores Schema.DisplayType for the field selected to prevent running out of describes when building the batch Apex query from the rule criteria.  Type is needed to determine whether to use quotes or not (string fields need them, numbers don&#39;t).

Cannot be manually updated as the trigger will always overwrite (expected &amp; desirable behavior).</description>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>