force-app/main/default/objects/chttrunfollow__UnfollowRule__c/fields/chttrunfollow__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__ObjectName__c</fullName>
    <description>Name of the object such as Opportunity or Case.  This is the API name.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>