force-app/main/default/objects/chttrunfollow__UnfollowRule__c/validationRules/chttrunfollow__No_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>chttrunfollow__No_Commas</fullName>
    <active>true</active>
    <description>Disallows comma&#39;s in Value as my code doesn&#39;t support them</description>
    <errorConditionFormula>contains( chttrunfollow__Value__c, &quot;,&quot;)</errorConditionFormula>
    <errorMessage>Unfortunately, you cannot use a comma for either multiple values or numbers. Please remove any commas, and if desired, create a second rule for additional criteria.</errorMessage>
</ValidationRule>