force-app/main/default/objects/chttrunfollow__UnfollowRule__c/validationRules/chttrunfollow__No_Negative_Delay.validationRule-meta.xml
<ValidationRule>
    <fullName>chttrunfollow__No_Negative_Delay</fullName>
    <active>true</active>
    <description>Disallows negative numbers from DaysDelay</description>
    <errorConditionFormula>chttrunfollow__DaysDelay__c &lt;0</errorConditionFormula>
    <errorMessage>You cannot use a negative number for the Delay.  Please enter 0 or a positive number.</errorMessage>
</ValidationRule>