force-app/main/default/objects/chttrunfollow__UnfollowRule__c/validationRules/chttrunfollow__Rule_objectfield_operator_value_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>chttrunfollow__Rule_objectfield_operator_value_not_null</fullName>
    <active>true</active>
    <description>Checks that the rule has a valid object, field, operator, and value</description>
    <errorConditionFormula>ISNULL(chttrunfollow__ObjectName__c) ||chttrunfollow__ObjectName__c==&apos;&apos; || ISNULL(chttrunfollow__FieldName__c) ||chttrunfollow__FieldName__c==&apos;&apos; || ISNULL(text(chttrunfollow__Operator__c ))  || ISNULL(chttrunfollow__Value__c) || chttrunfollow__Value__c==&apos;&apos;</errorConditionFormula>
    <errorMessage>Error: You must select an object, field, operator, and value before saving. Blank or null values are not supported.</errorMessage>
</ValidationRule>