force-app/main/default/objects/chttrunfollow__UnfollowRule__c/listViews/chttrunfollow__All.listView-meta.xml
<ListView>
    <fullName>chttrunfollow__All</fullName>
    <columns>chttrunfollow__Active__c</columns>
    <columns>chttrunfollow__ObjectLabel__c</columns>
    <columns>chttrunfollow__FieldLabel__c</columns>
    <columns>chttrunfollow__Operator__c</columns>
    <columns>chttrunfollow__Value__c</columns>
    <columns>chttrunfollow__DaysDelay__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>